initial commit for removing pod permissions
